test/classes/errors/nilability-init-var/init-var-oknil-unmanaged-from-nonnil-shared.good
init-var-oknil-unmanaged-from-nonnil-shared.chpl:9: error: cannot initialize variable 'lhs' of type 'unmanaged MyClass?' from a 'shared MyClass'
